--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
 <h1>Frenchie visit</h1>
   <a href="http://christrees.com">Back to christrees.com</a>
-  <hr/><hr/>
-  <!--
+  <hr/>
+  <a href="http://frenchie.christrees.com/mobile">Mobile Phone Viewer</a>
+  <hr/>
+  <!--  -->
   <h1>... The Frenchie Invasion ...</h1>
   <img src="KimberlyAlanAliceJeremy.jpg" alt="Frenchie" width="100%"/>
   <hr/>
-  -->
+
   <ul>
     <li>Photos from <a href="https://frenchie.christrees.com">FRENCHIE</a> invasion</li>
-    <li>Relevant <a href="https://linkedin.com/in/christrees">link</a> to seek.</li>
+    <li>Relevant <a href="https://photos.app.goo.gl/iUtaWXfxQqb4cCjt8">Google Shared Album</a> to use.</li>
   </ul>
 </body>
 </html>
