--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <hr/>
 
   <ul>
-    <li>Photos from <a href="https://frenchie.christrees.com">FRENCHIE</a> invasion</li>
+    <li>Photos from <a href="http://frenchie.christrees.com">FRENCHIE</a> invasion</li>
     <li>Relevant <a href="https://photos.app.goo.gl/iUtaWXfxQqb4cCjt8">Google Shared Album</a> to use.</li>
-    <li>Photos from <a href="https://lavonne.klopfenstein.org">Lavonne's</a> 90th Birthday</li>
-    <li>Photos from <a href="https://christmas.klopfenstein.org">Klopfenstein</a> Christmas</li>
+    <li>Photos from <a href="http://lavonne.klopfenstein.org">Lavonne's</a> 90th Birthday</li>
+    <li>Photos from <a href="http://christmas.klopfenstein.org">Klopfenstein</a> Christmas</li>
   </ul>
 </body>
 </html>
