--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,6 +16,8 @@
     <header>Kimberly and Jeremy</header>
     <h1><hr/>Frenchie Invasion <a href="https://photos.app.goo.gl/iUtaWXfxQqb4cCjt8">2019</a></h1><hr/>
     <div class="photoYear" data-fetch="iUtaWXfxQqb4cCjt8"></div>
+    <h1><hr/>Kimberly (pre) <a href="https://photos.app.goo.gl/7vh2xduseX7qW6zz9">1997</a></h1><hr/>
+    <div class="photoYear" data-fetch="7vh2xduseX7qW6zz9"></div>
 
   </body>
 </html>
